--- a/app/styles/modules/Content.module.scss
+++ b/app/styles/modules/Content.module.scss
@@ -4,22 +4,64 @@
 @use '_Animations.module.scss' as *;
 
 .container{
-    text-align: center;
-    width: 5rem;
+    width: 90%;
+    padding-inline: auto;
+    @include flexRow;
+    justify-content: space-between;
+    font-size: .6rem;
     .main{
-        translate: 0px -5px;
+        text-align: center;
+        .left{
+            translate: 0px -6px;
+        }
+        .right{
+            span{
+                text-transform: lowercase;
+                font-style: italic;
+                font-size: .5rem;
+                color: rgb(0, 174, 255);
+            }
+        }
     }
     .minmax{
         @include flexRow;
-        justify-content: space-between;
-        font-size: .6rem;
+        width: 50%;
+        align-items: center;
+        justify-content: space-around;
         .min{
-            color: rgb(0, 238, 255);
-            opacity: .6;
+            color: rgb(135, 235, 233);
         }
         .max{
-            color: rgb(255, 0, 0);
-            opacity: .6;
+            color: rgb(241, 51, 51);
         }
     }
+    // text-align: center;
+    // width: 5rem;
+    // .main{
+    //     translate: -30px -7px;
+    //     @include flexRow;
+    //     font-size: .7rem;
+    //     @include borderRed;
+    //     width: 15rem;
+    //     justify-content: space-between;
+    //     .right{
+    //         span{
+    //             font-size: .5rem;
+    //             text-transform: lowercase;
+    //         }
+    //     }
+    // }
+    // .minmax{
+    //     @include flexRow;
+    //     justify-content: space-between;
+    //     font-size: .6rem;
+    //     .min{
+    //         color: rgb(0, 238, 255);
+    //         opacity: .6;
+    //     }
+    //     .max{
+    //         color: rgb(255, 0, 0);
+    //         opacity: .6;
+    //     }
+    // }
 }
